--- a/our team.html
+++ b/our team.html
@@ -25,7 +25,7 @@
             <div class="box">
             <img src="team.png">
             <h2>Anna Belle</h2>
-            <p>Anna is the youngest and we expect a lot from him </p>
+            <p>Anna is the youngest and we expect a lot from her </p>
         </div>
         <div class="box">
             <img src="team1.png">
