--- a/courses.html
+++ b/courses.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>webIQ</title>
 
-    <link rel="stylesheet" href="styleSheet4.css" />
+    <link rel="stylesheet" href="stylesheet4.css" />
 </head>
 
 <body>
